<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>deep_global_registration</name>
  <version>0.0.0</version>
  <description>The DeepGlobalRegistration package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/sbgisen/DeepGlobalRegistration</url>
  <url type="bugtracker">https://github.com/sbgisen/DeepGlobalRegistration/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>python-is-python3</build_depend>
  <exec_depend>rospy</exec_depend>
  <export/>
</package>
